<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notepad</string>
    <string name="app_description">Devin</string>
    <string name="no_notes">No Notes found.\nPress \'New Note\' to create one.</string>
    <string name="hint_longpress">Press and hold an item for extra options.</string>
    
    <string name="menu">Menu</string>
    <string name="menu_insert">New Note</string>
    <string name="menu_search">Search</string>
    <string name="menu_prefs">Settings</string>
    <string name="menu_edit">Edit Note</string>
    <string name="menu_edit_title">Rename</string>
    <string name="menu_delete">Delete Note</string>
    <string name="menu_revert">Discard Changes</string>
    <string name="menu_send">Share</string>
    
    <string name="dialog_delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this note?</string>
    <string name="dialog_back">Back</string>
    <string name="search_hint">Search</string>
    <string name="search_noresults">Could not find any notes containing \'%1$s\'.</string>

    <plurals name="search_results">
        <item quantity="one">%1$d result for \'%2$s\' </item>
        <item quantity="other">%1$d results for \'%2$s\' </item>
    </plurals>

    <string name="error_nomedia">Could not find any usable external storage. Check your SD card and try again.</string>
    <string name="dialog_export">Export Notes</string>
    <string name="export_confirmation">Are you sure you want to export your notes to the SD card? This will overwrite any existing files with the same name.</string>
    <string name="export_progress">Exporting notes…</string>

    <plurals name="export_done">
        <item quantity="one">Exported %1$d note to \'%2$s\'.</item>
        <item quantity="other">Exported %1$d notes to \'%2$s\'.</item>
    </plurals>

    <string name="export_failed">Export failed!</string>
    <string name="dialog_import">Import Notes</string>
    <string name="import_confirmation">Are you sure you want to import notes from your SD card? This will overwrite any existing notes with the same name.</string>
    <string name="import_progress">Importing notes…</string>

    <plurals name="import_done">
        <item quantity="one">Imported %1$d note from \'%2$s\'.</item>
        <item quantity="other">Imported %1$d notes from \'%2$s\'.</item>
    </plurals>

    <string name="about">About</string>
    <string name="devin">Copyright 2014 Devin Hussey</string>
    <string name="about1">"Notepad for Android"</string>
    <string name="about2">"Simple, easy-to-use notepad by Devin Hussey. Forked from BanderLabs."</string>
    <string name="licences">Licenses</string>
    <string name="import_failed">Import failed!</string>
    <string name="pref_general">General</string>
    <string name="pref_editor">Editor</string>
    <string name="pref_label">Notepad Settings</string>
    <string name="pref_listItemSize">Large List Items</string>
    <string name="pref_listItemSizeSummaryOn">Showing large list items</string>
    <string name="pref_listItemSizeSummaryOff">Showing small list items</string>
    <string name="pref_sortOrder">Sort Order</string>
    <string name="pref_sortOrderSummary">Sorting notes by %s</string>
    <string name="pref_sortAscending">Sort Ascending</string>
    <string name="pref_sortAscendingSummaryOn">Sorting in ascending order</string>
    <string name="pref_sortAscendingSummaryOff">Sorting in descending order</string>
    <string name="pref_theme">Theme Variation</string>
    <string name="pref_themeSummaryOn">Using Holo Light Theme</string>
    <string name="pref_themeSummaryOff">Using Holo Dark Theme</string>
    <string name="pref_textSize">Text Size</string>
    <string name="pref_textSizeSummary">Using text size %s</string>
    <string name="pref_typeface">Use Monospace</string>
    <string name="pref_typefaceSummary">Use Monospaced Font</string>
    <string name="pref_inputType">Use AutoCorrect and Spell Check</string>
    <string name="pref_inputTypeSummary">Enables or disables these.</string>
    <string name="pref_deleteConfirmation">Warn before Delete</string>
    <string name="pref_deleteConfirmationSummaryOn">Warn when deleting a note</string>
    <string name="pref_deleteConfirmationSummaryOff">Do not warn when deleting a note</string>
    <string name="pref_rememberPosition">Remember Position</string>
    <string name="pref_rememberPositionSummaryOn">Keep cursor position from where you left off.</string>
    <string name="pref_rememberPositionSummaryOff">Always scroll to <b>bottom.</b></string>
    <string name="pref_notes">Import/Export</string>
    <string name="pref_export">Export</string>
    <string name="pref_exportSummary">Export your notes to the SD card</string>
    <string name="pref_import">Import</string>
    <string name="pref_importSummary">Import notes from your SD card</string>
    <string name="pref_themeType">Theme Style</string>
    <string name="pref_themeTypeSummary">Android Version style</string>
    <string name="notices_title">Notices</string>
    <string name="notices_close">Close</string>
    <string name="pref_action_bar_color">Action Bar Color</string>
    <string name="pref_action_bar_color_summary">Sets the background of the Action Bar.</string>
    <string name="pref_window_background">Screen Background</string>
    <string name="pref_window_background_summary">Sets the background color of the content.</string>

</resources>